--- a/package.json
+++ b/package.json
@@ -14,6 +14,17 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --cache",
+      "bash -c tsc"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
