--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "axios": "^0.21.4",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "formik": "^2.2.9",
