--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
     "typescript": "3.9.7",
+    "web3": "^1.5.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
