--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-copy-to-clipboard": "5.0.3",
     "react-dom": "16.13.1",
     "react-modal": "^3.14.3",
+    "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^7.1.3",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
@@ -76,6 +77,7 @@
     "@types/react-copy-to-clipboard": "5.0.0",
     "@types/react-dom": "16.9.0",
     "@types/react-modal": "^3.12.1",
+    "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/react-select": "4.0.13",
